--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   flutter_screenutil: ^5.8.4
+  cloud_firestore: ^4.8.3
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.1
 
 dev_dependencies:
   flutter_test:
